fixes dark mode errors

--- a/src/components/Dialog/styles.module.scss
+++ b/src/components/Dialog/styles.module.scss
@@ -41,10 +41,12 @@
             margin-top: 20px;
             margin-bottom: 20px;
             text-align: center;
+            color: var(--foreground-1);
         }
 
         .cancel_button {
             border-radius: 12px;
+            color: var(--foreground-1);
             background: var(--background-2);
             padding: 14px 0px;
             border: none;
