--- a/src/components/PrimaryButton/styles.module.scss
+++ b/src/components/PrimaryButton/styles.module.scss
@@ -27,6 +27,7 @@
 
         &.red {
             background: var(--red-1);
+            color: white;
         }
 
         &.grey {
