--- a/src/components/Tabs/styles.module.scss
+++ b/src/components/Tabs/styles.module.scss
@@ -11,7 +11,7 @@
     border-bottom: 2px;
     border-bottom-style: solid;
     border-bottom-color: var(--border-1);
-    background: var(--background-2);
+    background: var(--background-1);
     color: var(--foreground-1);
     padding: 16px;
     text-align: center;
